--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ On this day we join hands amidst our families and loved ones to start our journe
                 <p class="section-tagline"style="font-family: -webkit-body;font-size:25px;font-weight:700;color: #FFC107;">Mr. RAM PATIL</p>
                 
                 <p class="section-tagline">and</p>
-				<p class="section-tagline"style="font-family: -webkit-body;font-size:25px;font-weight:700;color: #FFC107;">Mrs.</p>
+				<p class="section-tagline"style="font-family: -webkit-body;font-size:25px;font-weight:700;color: #FFC107;">Mrs. ARUNA PATIL</p>
 
             </div>
             </div>
