--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ On this day we join hands amidst our families and loved ones to start our journe
         <section class="section-padding ">
             <div class="container">
                 <h3 class="section-title"> With Best<span> Compliments </span>From</h3>
-		    <p class="name-boy"style="font-size:25px; color:#eb1f05">Lagori Group</p>
+		    <p class="section-tagline"style="font-size:25px; color:#FF0099">Lagori Group</p>
                 <p class="section-tagline">Shraddha, Megha, Shruti, Priti, Roshani, Jagruti, Pratiksha & Latika</p>
                 <p class="section-tagline" style="color:#eb1f05;">Gift us only with the honour of your presence.</p>
                
