--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="icon" href="images/retina/fevicon.png" type="image/png" sizes="32x32">
         <!-- CSS -->
         <!-- bootstrap -->
+	 <link href="css/timer.css" rel="stylesheet" type="text/css"/>
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"/>        
         <!-- font awesome -->
         <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css"/>                
@@ -49,7 +50,7 @@
         </section><br>
         <!-- ==========  /Banner  ========== -->
         <!-- ==========  Timer  ========== -->
-        <section id="timer"style="margin-top:18px;">
+        <section style="margin-top:18px;">
             <div class="container">
                 <h3 class="hidden">Countdown</h3>
                 <div class="row">
@@ -62,8 +63,11 @@
                                             <img src="images/retina/general/m.jpg" alt="icon" />
                                         </div>
                                     </div>
-                                    <div class="col-sm-9 col-md-10">
-                                        <div class="centered text-center" id="myCounter"></div>
+                                    <div class="col-sm-9 col-md-10" >
+                                          <div class="abc"  id="days"></div>
+  <div class="abc" id="hours"></div>
+  <div class="abc" id="minutes"></div>
+  <div class="abc"  id="seconds"></div>
                                     </div>
                                 </div>
                             </div>
