--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                             <div class="story-content left animated" data-animate="fadeInLeft" >  
                                 <!--<span class="story-date pull-right">25th March 2016</span>-->                                
                                 <h3><span>how</span> we met</h3>
-                                <img src="images/retina/banner/met.JPG" alt="How we met" class="img-responsive" />
+                                <img src="images/retina/banner/met.jpeg" alt="How we met" class="img-responsive" />
                                 <p class="text-justify" >Our fairytale started when we met for the first time. We were brought together by fate but we will remain together by destiny. We met, We talked, And then we realized,We belong together</p>
                             </div>                            
                         </div>                        
@@ -157,7 +157,7 @@
                             <div class="story-content right animated" data-animate="fadeInRight" data-delay="1s">
                                 
                                 <h3 class="pull-right">Love <span>Proposal</span></h3>
-                                <img src="images/retina/banner/pro.JPG" alt="Love Proposal" class="img-responsive" />
+                                <img src="images/retina/banner/pro.jpeg" alt="Love Proposal" class="img-responsive" />
                                 <p class="text-justify">All that begins well, ends well !
 It doesn't matter who said it first. The moment was perfect when we made a promise to spend every day and every moment of our lives for each other.</p>
                             </div>
@@ -166,7 +166,7 @@ It doesn't matter who said it first. The moment was perfect when we made a promi
                             <div class="story-content left animated" data-animate="fadeInLeft" data-delay="1.5s" >  
                                                            
                                 <h3>We Got <span>Engaged</span></h3>
-                                <img src="images/retina/banner/engage.JPG" alt="We Got Engaged" class="img-responsive" />
+                                <img src="images/retina/banner/engage.jpeg" alt="We Got Engaged" class="img-responsive" />
                                 <p class="text-justify">Time for us to tell the world we are getting hitched! After we exchanged smiles, gifts and finally hearts, we exchanged rings.
                                  <br>"There are no such things as soulmates. Until two souls are joined together by love to become one."</p>
                             </div>                            
